force-app/main/default/objects/Participant__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>Total_Amount_Received__c - Total_Amount_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>