force-app/main/default/objects/Participant__c/fields/Total_Amount_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amount Sent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>